k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hugging-face-demo
  namespace: hf-demo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hugging-face-demo
  template:
    metadata:
      labels:
        app: hugging-face-demo
    spec:
      # If your GHCR package is PRIVATE, uncomment the next two lines
      # imagePullSecrets:
      #   - name: ghcr-cred
      containers:
        - name: app
          image: ghcr.io/shenyiqinxin/hugging-face-demo:main  # will be updated by Actions to :$GITHUB_SHA
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
          readinessProbe:
            httpGet: { path: "/", port: 8080 }
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet: { path: "/", port: 8080 }
            initialDelaySeconds: 30
            periodSeconds: 20
